--- a/Return to the Stars.inform/Settings.plist
+++ b/Return to the Stars.inform/Settings.plist
@@ -26,7 +26,7 @@
 		<key>IFSettingTestingTabHelpShown</key>
 		<true/>
 		<key>IFSettingTestingTabShownCount</key>
-		<integer>82</integer>
+		<integer>97</integer>
 	</dict>
 	<key>IFOutputSettings</key>
 	<dict>
@@ -35,7 +35,7 @@
 		<key>IFSettingCreateBlorb</key>
 		<true/>
 		<key>IFSettingNobbleRng</key>
-		<false/>
+		<true/>
 		<key>IFSettingZCodeVersion</key>
 		<integer>256</integer>
 	</dict>
