Use Smarter Parser

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 "Return to the Stars.inform/Metadata.iFiction" linguist-generated
 "Return to the Stars.inform/Settings.plist" linguist-generated
+"Return to the Stars.materials/Extensions/Aaron Reed/*.i7x" linguist-vendored
