--- a/Return to the Stars.inform/manifest.plist
+++ b/Return to the Stars.inform/manifest.plist
@@ -4,6 +4,8 @@
     <dict>
         <key>Graphics</key>
         <dict>
+            <key>1</key>
+            <string>/Users/adrianwelcker/Documents/Development/Inform/StarsReturn/Return to the Stars.materials/Cover.png</string>
         </dict>
     </dict>
 </plist>
