--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 "Return to the Stars.inform/Metadata.iFiction" linguist-generated
 "Return to the Stars.inform/Settings.plist" linguist-generated
 "Return to the Stars.materials/Extensions/Aaron Reed/*.i7x" linguist-vendored
+"Return to the Stars.materials/Extensions/Nathanael Nerode/*.i7x" linguist-vendored
+"Return to the Stars.materials/Extensions/Jon Ingold/*.i7x" linguist-vendored
