Dark mode website and Quixe 2.2.0

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 "Return to the Stars.materials/Extensions/Aaron Reed/*.i7x" linguist-vendored
 "Return to the Stars.materials/Extensions/Nathanael Nerode/*.i7x" linguist-vendored
 "Return to the Stars.materials/Extensions/Jon Ingold/*.i7x" linguist-vendored
+"Return to the Stars.materials/Templates/StarryQuixe/*" linguist-vendored
