--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,5 @@
 "Return to the Stars.materials/Extensions/Aaron Reed/*.i7x" linguist-vendored
 "Return to the Stars.materials/Extensions/Nathanael Nerode/*.i7x" linguist-vendored
 "Return to the Stars.materials/Extensions/Jon Ingold/*.i7x" linguist-vendored
+"Return to the Stars.materials/Extensions/Wade Clarke/*.i7x" linguist-vendored
 "Return to the Stars.materials/Templates/StarryQuixe/*" linguist-vendored
